--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ ol {
 element { font-family: Helvetica, Arial, JosefinSans; }
 
 p {
-    font-family: Arial
+    font-family: Arial, serif
 }
 
 table {
