--- a/css/twitter.css
+++ b/css/twitter.css
@@ -7,6 +7,7 @@
 }
 * {
     box-sizing: border-box;
+
 }
 body, html {
     background-color: var(--main-bg);
@@ -27,22 +28,30 @@ a {
 }
 .top-nav {
     background: var(--light-bg);
+    position: fixed;
+    width: 100%;
 }
 .nav {
-    list-style-type: none;
     padding: 0;
+    list-style-type: none;
     margin: 0;
 }
 .nav-link {
     color: var(--main-link-color);
     font-weight: bold;
     text-decoration: none;
+
 }
 .nav-link:hover {
+    display: inline-block;
     color: var(--link-color);
 }
 .profile {
     background: var(--light-bg);
+    height: 80px;
+
+
+
 }
 .btn {
     border: 1px solid var(--main-link-color);
@@ -66,3 +75,21 @@ a {
 .text-muted {
     color: var(--main-link-color);
 }
+
+.nav-item{
+    display: inline-block;
+    padding: 1.5em;
+}
+
+.profile-form{
+    float: right;
+    line-height: 80px;
+
+}
+
+profile-image{
+position: a
+}
+
+
+
