--- a/css/flexy-site.css
+++ b/css/flexy-site.css
@@ -3,7 +3,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
 
-header, article, fotter {
+header, article, footer, aside {
     padding: 0.5rem;
     box-sizing: border-box;
 }
@@ -14,6 +14,43 @@ header{
     text-align: center;
 }
 
-article {
+
+main{
+    display: flex;
+}
+
+article{
+    flex: 75%;
+}
+
+aside {
+    flex: 25%;
     background-color: white;
 }
+
+nav{
+    display: flex;
+    background-color: black;
+    padding: 10px 0;
+}
+
+nav a {
+    flex: auto;
+    background: #ccc;
+    color: black;
+    text-align: center;
+    margin: 0 5px;
+    padding: 5px 0;
+    text-decoration: none;
+}
+
+nav a:hover{
+    outline: 1px solid red;
+    color: red;
+    text-decoration: underline;
+}
+
+nav a:nth-of-type(1), nav a:nth-of-type(2), nav a:last-of-type{
+    flex-shrink: 2;
+}
+
